<resources>
    <string name="app_name">BRPL DSK</string>
    <string name="app_name_title">Seva Kendra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Seva Kendra</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_company">BSES</string>
    <string name="app_title_main">SEVA KENDRA</string>
    <string name="hint_empid">Employee ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_sdate">Start Date</string>
    <string name="hint_edate">End Date</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_renew_password">Re-Enter New Password</string>
    <string name="btn_sign_in">Log In</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_close">Title</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_confirm_email">Confirm</string>
    <string name="err_msg_empid">Enter your employee id</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_re_password">Re-Enter password does not match</string>
    <string name="loginscreen_welcome_snack">Welcome To BSES Intenal Messenger</string>
    <string name="loginscreen_forgetPassword">Forget Password</string>
    <string name="forgetPassHeading">Forget Password</string>
    <string name="forgetPassHint">* Please enter an email id on which password will be send</string>
    <string name="filter_title">Filter</string>
    <string name="start_date_calender">Start Date:</string>
    <string name="end_date_calender">End Date:</string>
    <string name="title_sict">select</string>
    <string name="aboutusdata"><b><i> BSES Yamuna Power Limited (BYPL)</i></b> \n BYPL distributes power to an area spread over 200 sq kms with a customer density of 7600 per sq km.</string>
    <string name="aboutusdatarpl"><b><i>BSES Rajdhani Power Limited (BRPL)</i></b> \n BRPL distributes power to an area spread over 750 sq. km with a customer density of ~3000 per sq km.</string>
    <string name="external_dir">GetSignature</string>
</resources>